<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>matt.wltr.labs</groupId>
    <artifactId>tictactoe</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <modelVersion>4.0.0</modelVersion>
    <name>tictactoe</name>
    <modules>
        <module>tictactoe.app</module>
        <module>tictactoe.game</module>
        <module>tictactoe.game.series</module>
        <module>tictactoe.util</module>
        <module>tictactoe.player.human</module>
        <module>tictactoe.player.minimax</module>
        <module>tictactoe.player.random</module>
        <module>tictactoe.player.tabularquality</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>14</release>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>